update APIDocsMenu: - update protocols_item_list initialization - add allure steps